--- a/src/app/components/sidebar/sidebar.component.css
+++ b/src/app/components/sidebar/sidebar.component.css
@@ -1,14 +1,11 @@
-/* .sidebar{
-	width: 20vw;
-	border: 2px solid red;
-	height: 80vh;
-	display: flex;
-	gap: 0.5rem;
-	flex-direction: column;
-} */
+
 .sidebar {
   border: 1px solid black;
   grid-area: sidebar;
+  position: fixed;
+  width: 200px;
+  background: pink;
+  height: 100vh;
 }
 .categories , .designer{
 	display: flex;
